--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -1,3 +1,5 @@
+  <!-- Le javascript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
 </body>
-
 </html>
