--- a/includes/_header.html
+++ b/includes/_header.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>College Crowd</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<head>
+    <!-- @reload -->
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <!-- @reload -->
-  
-  <!-- @stylesheet normalize style -->
-  <!-- @javascript jquery-1.8.3.min app -->
-  
-  <link href="<!-- @path favicon.ico -->" rel="shortcut icon">
-  <link href="<!-- @path apple-touch-icon.png -->" rel="apple-touch-icon">
-  
-  <title>New Project</title>
-  
-</head>
+    <!-- Le styles -->
+    <!-- <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" rel="stylesheet"> -->
+    <!-- <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet"> -->
 
+    <!-- @stylesheet bootstrap -->
+    <!-- @stylesheet bootstrap-metro -->
+    <!-- @stylesheet font-awesome -->
+    <style type="text/css">
+      body { padding:20px 0; }
+    </style>
+    <!-- @stylesheet bootstrap-responsive -->
+    <!-- @stylesheet style -->
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Le fav and touch icons -->
+    <!-- <link rel="shortcut icon" href="http://twitter.github.com/bootstrap/assets/images/favicon.ico">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="http://twitter.github.com/bootstrap/assets/images/apple-touch-icon-114x114.png"> -->
+  </head>
 <body>
-
-  <header>
-    <!-- @include _nav -->
-  </header>
