--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -1,4 +1,4 @@
-$willys-purple: #9954bb
+$willys-purple: #61179a
 
 .center
   text-align: center
@@ -13,11 +13,30 @@ $willys-purple: #9954bb
 .text-purple
   color: $willys-purple
 
+.text-white
+  color: white
+
 .logo
   background-color: $willys-purple
   padding: 5px 10px
-  font-size: 20px
-  color: white
+  font-family: serif
+  color: yellow
 
 .unstyled-link:hover
   text-decoration: none
+
+.header
+  width: 100%
+  height: 200px
+  margin-bottom: 20px
+  background:
+    image: url('http://upload.wikimedia.org/wikipedia/commons/3/3f/Williams_College_-_Thompson_Memorial_Chapel_exterior_view.JPG')
+    repeat: no-repeat
+    size: cover
+    position: center center
+
+.header-text
+  padding: 70px 20px
+
+.highlight
+  background-color: yellow
