--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -40,3 +40,7 @@ $willys-purple: #61179a
 
 .highlight
   background-color: yellow
+
+.control-group.error .input-prepend .add-on,
+.control-group.error .input-append .add-on
+  border-color: #FF0051
