--- a/includes/_banner.html
+++ b/includes/_banner.html
@@ -2,7 +2,7 @@
   <i class="icon icon-money icon-large"></i> <strong>Interested in funding a project?</strong> Please first read our <a href="<!-- @path Funder_Guidelines -->" class="link-white">guidelines</a>.
 </div>
 <div class="alert alert-info">
-  <i class="icon icon-time icon-large"></i> College Crowd's <em>All or Nothing</em> pilot began on 7/14/13 and ends on 8/4/13. There are <strong>30</strong> days left!
+  <i class="icon icon-info-sign icon-large"></i> College Crowd is organized by members of the Williams Alumni Community. It is <strong>not</strong> affiliated or endorsed by Williams College or its administration.
 </div>
 <div class="header">
   <div class="header-text">
