--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -1,5 +1,13 @@
+</div>
+</div>
+</div>
   <!-- Le javascript
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
+  <!-- @javascript jquery-* -->
+  <!-- @javascript happy-bootstrap -->
+  <!-- @javascript happy.methods -->
+  <!-- @javascript app -->
+  <!-- @javascript form -->
 </body>
 </html>
