--- a/includes/_header.html
+++ b/includes/_header.html
@@ -32,5 +32,10 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="http://twitter.github.com/bootstrap/assets/images/apple-touch-icon-114x114.png"> -->
+
+    <!-- @include ga_universal -->
   </head>
 <body>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span10 offset1">
